wip: add markup

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,2 +1,14 @@
 header.header 
   .header__wrapper
+    nav.header__navigation 
+      ul.header__navigation__row 
+        li.header__navigation__item
+          a.header__home__link Crane
+        li.header__navigation__item
+          a.header__home__link Models
+        li.header__navigation__item
+          a.header__home__link Submission
+        li.header__navigation__item
+          a.header__home__link About
+        li.header__navigation__item
+          a.header__home__link Contact 
