--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -7,3 +7,70 @@ block content
   main.home
     .home__wrapper 
 
+      section.home__hero 
+        .home__hero__wrapper
+          h1.home__hero__heading Rediscovering the glamour and flair of 80s fashion.
+          p.home__hero__body 
+           | With a focus on retro and vintage looks, Crane have talented models who can bring a sense of nostalgia and authenticity to their photoshoots and runway shows.
+          p.home__hero__cta ( Scroll down )
+          figure.home__hero__media 
+          figure.home__hero__media 
+      
+      section.home__slides 
+        .home__slides__wrapper 
+          .home__slide__medias
+            figure.home__slide__media
+            figure.home__slide__media
+            figure.home__slide__media
+            figure.home__slide__media
+            figure.home__slide__media
+            figure.home__slide__media
+          h2.home__slides__heading 
+            | We are committed to pushing the boundaries of fashion and creating unforgettable visuals
+
+      section.home__clientele 
+        .home__clientele__wrapper 
+          p.home__clientele__intro Been in business since 2002, working with brands like:
+          ul.home__clientele__brands
+            li.home__clientele__brand 
+              h3.home___client__name Nike
+            li.home__clientele__brand 
+              h3.home___client__name Lamborghini
+            li.home__clientele__brand 
+              h3.home___client__name vouge paris
+            li.home__clientele__brand 
+              h3.home___client__name addidas
+            li.home__clientele__brand 
+              h3.home___client__name Balenciaga
+            li.home__clientele__brand 
+              h3.home___client__name puma
+
+      section.home__about
+        .home__about__wrapper 
+          .home__about__medias
+            figure.home__about__media
+          .home__about__details
+            h3.home__about__heading more than just a modeling agency
+            p.home__about__body 
+              | We are a team of creative individuals who are dedicated to promoting the unique style and spirit of the 80s. We believe that fashion is not just about what you wear, but it's also about expressing yourself and embracing individuality.
+            p.home__about__cta → Our Models
+
+      section.home__carousel
+        .home__carousel__medias 
+          figure.home__carousel__media
+          figure.home__carousel__media
+          figure.home__carousel__media
+        .home__carousel__slider
+        h3.home__carousel__heading We are people of color.
+        p.home__carousel__body 
+            | We strive to provide our models with opportunities to showcase their unique personalities and talents, and to work with top brands and photographers.
+
+      section.home__contact 
+        .home__contact__wrapper 
+          p.home__contact__intro From flashy leggings and oversized blazers to acid wash jeans and power suits, Crane's models are experts at bringing the style of the 80s back to life.
+          
+
+
+
+
+        
