--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,2 +1,27 @@
-footer.footer 
-  .footer__wrapper 
+footer.footer
+  .footer__wrapper
+
+    section.footer__contact 
+      .footer__contact__wrapper 
+        .footer__contact__details
+          p.footer__contact__intro From flashy leggings and oversized blazers to acid wash jeans and power suits, Crane's models are experts at bringing the style of the 80s back to life.
+        .footer__contact__form 
+          p.footer__form__intro Subscribe to our newsletter
+          input.footer__form__input(type="email", name="" value="Your email")
+      .footer__inquiry__wrapper 
+        .footer__enquiry__mail
+          p.footer__inquiry__intro For inquiry, contact:
+          a.footer__inquiry__email info@cranemodeling.com
+        .footer__enquiry__socials 
+          a.footer__enquiry__social Instagram ↗
+          a.footer__enquiry__social Twitter ↗
+          a.footer__enquiry__social Facebook ↗
+
+    section.footer__outro
+      .footer__outro__wrapper
+        .footer__outro__details
+          p.footer__outro__detail Privacy Policy
+          p.footer__outro__detail Cookie Policy
+          p.footer__outro__detail Credits
+          p.footer__outro__detail All Right Reserved © 2023
+        h1.footer__outro__heading Crane Modeling ‘23
