--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -1,9 +1,12 @@
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 $font-serif: serif;
 $font-sans: sans-serif;
+$font-PP: "PP Neue Montreal Variable", serif;
+$font-Display: "PlayFair display", sans-serif;
 
 $color-black: #000000;
-$color-white: #ffffff;
+$color-green: #204831;
+$color-white: #D8D8D8;;
 
 $z-1: 1;
 $z-2: 2;
