--- a/views/base.pug
+++ b/views/base.pug
@@ -41,6 +41,7 @@ html(lang="en")
 
   body
     style
+      include ../public/type.css
       include ../public/main.css
 
     include ./partials/preloader
