--- a/styles/shared/layout.scss
+++ b/styles/shared/layout.scss
@@ -1,5 +1,5 @@
 %body {
-  padding: 2.5rem 4.5rem 0;
+  padding: 4rem 4rem 0;
   @include media("<phone") {
     padding: clamp(0rem, 2.7rem, 30px) clamp(0rem, 1.6rem, 20px) 0;
   }
@@ -8,8 +8,8 @@
 }
 
 %light-theme {
-  background: $color-white;
-  color: $color-black;
+  color: $color-white;
+  background: $color-green;
 }
 
 %absolute {
