--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,4 +14,6 @@
 @import "./partials/header/header";
 @import "./partials/preloader/preloader";
 
-@import "./pages/home/home";
+@import "./pages/home/hero";
+@import "./pages/home/slides";
+@import "./pages/home/clientele";
