--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -1,7 +1,7 @@
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 $font-serif: serif;
 $font-sans: sans-serif;
-$font-PP: "PP Neue Montreal Variable", serif;
+$font-PP: "PP Neue Montreal", serif;
 $font-Display: "PlayFair display", sans-serif;
 
 $color-black: #000000;
