--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -61,9 +61,14 @@ block content
           figure.home__carousel__media
           figure.home__carousel__media
         .home__carousel__slider
+          .home__carousel__track
+            .home__carousel__bar
         h5.home__carousel__heading We are people of color.
         p.home__carousel__body 
             | We strive to provide our models with opportunities to showcase their unique personalities and talents, and to work with top brands and photographers.
+      
+      include ../partials/footer
+
 
 
 
