--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -7,15 +7,16 @@ footer.footer
           p.footer__contact__intro From flashy leggings and oversized blazers to acid wash jeans and power suits, Crane's models are experts at bringing the style of the 80s back to life.
         .footer__contact__form 
           p.footer__form__intro Subscribe to our newsletter
-          input.footer__form__input(type="email", name="" value="Your email")
+          input.footer__form__input(type="email", name="" placeholder="Your email")
+          button.footer__form__submit(type="submit") Submit →
       .footer__inquiry__wrapper 
-        .footer__enquiry__mail
+        .footer__inquiry__mail
           p.footer__inquiry__intro For inquiry, contact:
           a.footer__inquiry__email info@cranemodeling.com
-        .footer__enquiry__socials 
-          a.footer__enquiry__social Instagram ↗
-          a.footer__enquiry__social Twitter ↗
-          a.footer__enquiry__social Facebook ↗
+        .footer__inquiry__socials 
+          a.footer__inquiry__social Instagram ↗
+          a.footer__inquiry__social Twitter ↗
+          a.footer__inquiry__social Facebook ↗
 
     section.footer__outro
       .footer__outro__wrapper
