--- a/views/pages/models.pug
+++ b/views/pages/models.pug
@@ -14,12 +14,12 @@ block content
           .models__intro__text
             | With a focus on retro and vintage looks, Crane have talented models who can bring a sense of nostalgia and authenticity to their photoshoots and runway shows.
           .models__intro__displays 
-            p.models__intro__display List
+            p.models__intro__display.active List
             p.models__intro__display Grid
             p.models__intro__display Editorial
 
             
-      section.models__about
+      section.models__about.list
         .models__about__bios 
           .models__about__bio
             figure.models__about__media
@@ -53,3 +53,6 @@ block content
             figure.models__about__media
             h4.models__about__name David
             p.models__about__country NPR
+
+    include ../partials/footer
+    
