--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,3 +21,8 @@
 @import "./pages/home/clientele";
 @import "./pages/home/about";
 @import "./pages/home/carousel";
+
+@import "./pages/models/hero";
+@import "./pages/models/list";
+@import "./pages/models/grid";
+@import "./pages/models/editorial";
