--- a/styles/utils/variables.scss
+++ b/styles/utils/variables.scss
@@ -4,9 +4,10 @@ $font-sans: sans-serif;
 $font-PP: "PP Neue Montreal", serif;
 $font-Display: "PlayFair display", sans-serif;
 
-$color-black: #000000;
+$color-black: #010300;
 $color-green: #204831;
-$color-white: #D8D8D8;;
+$color-white: #D8D8D8;
+;
 
 $z-1: 1;
 $z-2: 2;
