--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,26 +1,26 @@
 html {
-  overflow: hidden;
+  // overflow: hidden;
   font-size: calc(100vw / 1440 * 10);
 
-  @include media("<phone") {
-    font-size: calc(100vw / 360 * 10);
-  }
+  // @include media("<phone") {
+  //   font-size: calc(100vw / 360 * 10);
+  // }
 }
 
 body {
   @extend %text-s;
   @extend %light-theme;
-  min-height: 100vh;
+  // min-height: 100vh;
   user-select: none;
   -webkit-user-drag: none;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 ::-webkit-scrollbar {
   display: none !important;
 }
 
-a{
+a {
   color: inherit;
   text-decoration: none;
 }
@@ -30,6 +30,12 @@ video {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+figure {
+  // background: rgba(0, 0, 0, 0.593);
+  background: #0d1d14;
+  border: 0.05rem solid #08100c
 }
 
 input,
@@ -53,6 +59,6 @@ canvas {
   }
 }
 
-[data-reveal]{
+[data-reveal] {
   opacity: 0;
 }
