--- a/styles/shared/layout.scss
+++ b/styles/shared/layout.scss
@@ -1,8 +1,8 @@
 %body {
   padding: 4rem 4rem 0;
-  @include media("<phone") {
-    padding: clamp(0rem, 2.7rem, 30px) clamp(0rem, 1.6rem, 20px) 0;
-  }
+  // @include media("<phone") {
+  //   padding: clamp(0rem, 2.7rem, 30px) clamp(0rem, 1.6rem, 20px) 0;
+  // }
   position: fixed;
   top: 0;
 }
