--- a/styles/shared/text.scss
+++ b/styles/shared/text.scss
@@ -13,8 +13,12 @@
 }
 
 %text-s {
-  font-size: 1rem;
-  font-weight: 400;
+  font-family: $font-PP;
+    font-style: normal;
+    font-weight: 450;
+    font-size: 1.2rem;
+    line-height: 100%;
+    letter-spacing: 0.02em;
 }
 
 %text-m {
@@ -32,10 +36,18 @@
 }
 
 %text-l {
-  @include media("<phone") {
-    font-size: clamp(0rem, 1.5rem, 20px);
-    line-height: 1.25;
-  }
+  font-family: $font-Display;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 110%; 
+    text-transform: uppercase;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+
+  // @include media("<phone") {
+  //   font-size: clamp(0rem, 1.5rem, 20px);
+  //   line-height: 1.25;
+  // }
 }
 
 %text-xl {
@@ -62,6 +74,17 @@
   text-transform: uppercase;
 }
 
+
+%h4-x {
+    font-family: $font-Display;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 7.2rem;
+    line-height: 110%;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
+    font-feature-settings: 'pnum' on, 'lnum' on;
+}
 %h4 {
   font-family: $font-Display;
   font-style: normal;
