--- a/styles/index.scss
+++ b/styles/index.scss
@@ -26,3 +26,5 @@
 @import "./pages/models/list";
 @import "./pages/models/grid";
 @import "./pages/models/editorial";
+
+@import "./pages/model/index";
