created preloadables, added images

--- a/views/pages/home.pug
+++ b/views/pages/home.pug
@@ -14,17 +14,25 @@ block content
            | With a focus on retro and vintage looks, Crane have talented models who can bring a sense of nostalgia and authenticity to their photoshoots and runway shows.
           p.home__hero__cta ( Scroll down )
           figure.home__hero__media 
+            img(src=preloadables.home.heroImage1, alt="", srcset="")
           figure.home__hero__media 
+            img(src=preloadables.home.heroImage2, alt="", srcset="")
       
       section.home__slides 
         .home__slides__wrapper 
           .home__slide__medias
             figure.home__slide__media
+              img(src=preloadables.home.slideImage1, alt="", srcset="")
             figure.home__slide__media
+              img(src=preloadables.home.slideImage2, alt="", srcset="")
             figure.home__slide__media
+              img(src=preloadables.home.slideImage3, alt="", srcset="")
             figure.home__slide__media
+              img(src=preloadables.home.slideImage4, alt="", srcset="")
             figure.home__slide__media
+              img(src=preloadables.home.slideImage5, alt="", srcset="")
             figure.home__slide__media
+              img(src=preloadables.home.slideImage6, alt="", srcset="")
           h3.home__slides__heading 
             | We are committed to pushing the boundaries of fashion and creating unforgettable visuals
 
@@ -49,6 +57,7 @@ block content
         .home__about__wrapper 
           .home__about__medias
             figure.home__about__media
+              img(src=preloadables.home.aboutImage1, alt="", srcset="")
           .home__about__details
             h5.home__about__heading more than just a modeling agency
             p.home__about__body 
@@ -58,8 +67,11 @@ block content
       section.home__carousel
         .home__carousel__medias 
           figure.home__carousel__media
+            img(src=preloadables.home.carouselImage1, alt="", srcset="")
           figure.home__carousel__media
+            img(src=preloadables.home.carouselImage2, alt="", srcset="")
           figure.home__carousel__media
+            img(src=preloadables.home.carouselImage3, alt="", srcset="")
         .home__carousel__slider
           .home__carousel__track
             .home__carousel__bar
